[package]
name = "actix-todo-crud"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.6.0"
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = "0.11.3"
serde = { version = "1.0.203", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4"] }
